# Pinballs

./: .gitignore  CMakeLists.txt  PBS_Project_Plan.pptx  Pinballs_-_Final_Presentation.pptx  Pinballs_-_State.pptx  README.md
0_dummy/: CMakeLists.txt  DummySim.h
1_cannonball/: CannonBallSim.cpp  CannonBallSim.h
2_spring/: CMakeLists.txt  SpringSim.cpp  SpringSim.h  main.cpp
3_spinning/: CMakeLists.txt  SpinSim.cpp  SpinSim.h
4_gyro/: CMakeLists.txt  GyroSim.cpp  GyroSim.h  main.cpp
5_collision/: AABB.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionSim.h  main.cpp
6_mss/: CMakeLists.txt  MSSSim.cpp  MSSSim.h  main.cpp
7_fluid/: CMakeLists.txt  exercise.cpp  fluid2d.cpp  fluid2d.h  gauss_seidel.h  generateBuildWindows.bat  main.cpp  util.h
8_pinballs/: AABB.h  Ball.h  BoundingSphere.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionDetectionHelper.h  ColorEffect.cpp  ColorEffect.h  Digit.cpp  Digit.h  Effect.cpp  Effect.h  ForceEffect.cpp  ForceEffect.h  GravityEffect.cpp  GravityEffect.h  Guard.cpp  Guard.h  Obstacle.cpp  Obstacle.h  Paddle.cpp  Paddle.h  PinballSim.cpp  PinballSim.h  SAT.h  Score.cpp  Score.h  ScoreEffect.cpp  ScoreEffect.h  Segment.cpp  Segment.h  SoundEffect.cpp  SoundEffect.h  Table.cpp  Table.h  gjk2.h  main.cpp
cmake/: FindLIBIGL.cmake
data/: bounce_0.off  bumper.off  bumper_0.off  bumper_bar.off  cube.off  flipper.off  guard_0.off  guard_1.off  guard_2.off  guard_3.off  guard_4.off  guard_5.off  segment.off  table2.blend  table2.mtl  table_bottom_l.off  table_bottom_r.off  table_seperator.off  table_surface.off  table_top_l.off  table_top_m.off  (+6 more)
(+20 files in other folders)
